--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <p>Matias Daniel Castro Gonzalez Videla</p>
+                <img src="./assets/img/Nombre.png" alt="titulo">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -34,10 +34,10 @@
                         <a class="nav-link" href="#">Acerca de mi</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Linkedln</a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/matias-castro-gv-74a395228" target="_blank" rel="noopener noreferrer">Linkedln</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Contacto</a>
+                        <a class="nav-link" href="#">Portafolio</a>
                     </li>
                 </ul>
             </div>
