--- a/index.html
+++ b/index.html
@@ -3,26 +3,25 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
-        crossorigin="anonymous"></script>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <title>Curriculum Linkedin</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <title>Matias Castro</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+        integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-
-    <header>
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="./assets/img/Nombre.png" alt="titulo">
+                <img src="assets/img/Nombre.png" class="img-fluid">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -30,11 +29,6 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Acerca de mi</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://www.linkedin.com/in/matias-castro-gv-74a395228" target="_blank" rel="noopener noreferrer">Linkedln</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Portafolio</a>
@@ -43,15 +37,108 @@
             </div>
         </div>
     </nav>
+
+    <header id="perfil">
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="col-12">
+                    <img src="./assets/img/ryu.jpeg" alt="Mi cara" height="200px" class="rounded-circle">
+                </div>
+                <div class="col-md-8 col-12">
+                    <p class="my-3">
+                        Estudiante Desarrollador Frontend Jr.
+                    </p>
+                </div>
+            </div>
+        </div>
     </header>
 
-    <main>
 
-    </main>
 
-    <footer>
+    <section class="container">
+        <h2 class="section-title">Acerca de mí</h2>
+        <p> Soy argentino residiendo en Chile, con permiso de trabajo vigente y motivado por nuevos
+            desafíos. Me destaco por mi adaptabilidad, capacidad de aprendizaje rápido
+            y compromiso con los objetivos. Busco formar parte de un equipo donde pueda aportar mis
+            habilidades, asumir nuevas responsabilidades y contribuir positivamente al crecimiento de la
+            organización.</p>
+    </section>
 
-    </footer>
+    <section class="container">
+        <h2 class="section-title">Habilidades</h2>
+        <ul class="list-group">
+            <li class="list-group-item"><i class="fab fa-html5 icon mr-2"></i>HTML5</li>
+            <li class="list-group-item"><i class="fab fa-css3-alt icon mr-2"></i>CSS3</li>
+            <li class="list-group-item"><i class="fab fa-bootstrap icon mr-2"></i>Bootstrap</li>
+        </ul>
+    </section>
+
+    <section class="container">
+        <h4 class="section-title">Experiencias en otros campos</h4>
+        <ul class="list-group">
+            <li class="list-group-item"><button class="btn btn-primary mb-2" data-bs-toggle="collapse"
+                    data-bs-target="#trabajo1"><strong>Seguros Rivadavia</strong></button>
+                <div id="trabajo1" class="collapse">
+                    <strong>Asistente Online | 2024 - Actualidad</strong>
+                    <ol>
+                        <li>Gestión de presupuestos personalizados para clientes de seguros.</li>
+                        <li>Comunicación directa con clientes para resolver incidencias de pago y seguimiento de casos.
+                        </li>
+                        <li>Soporte administrativo y organización de información relevante para la operación diaria.
+                        </li>
+                        <li>Desarrollo de habilidades en resolución de conflictos, comunicación efectiva y manejo
+                            responsable de datos
+                            sensibles. </li>
+                    </ol>
+            </li>
+            <li class="list-group-item"><button class="btn btn-primary mb-2" data-bs-toggle="collapse"
+                    data-bs-target="#trabajo2"><strong>Alfonso Bodegon</strong></button>
+                <div id="trabajo2" class="collapse">
+                    <strong>Asistente de Cocina | 2022-2023</strong>
+                    <ol>
+                        <li>Elaboración de alimentos simples y acompañamientos.</li>
+                        <li>Limpieza y desinfección de utensilios y áreas de trabajo en la cocina.</li>
+                        <li>Colaboración en diversas tareas según las necesidades del equipo.</li>
+                        <li>Gestión y control de inventario de insumos.</li>
+                    </ol>
+            </li>
+            <li class="list-group-item"><button class="btn btn-primary mb-2" data-bs-toggle="collapse"
+                    data-bs-target="#trabajo3"><strong>ST Diseño</strong></button>
+                <div id="trabajo3" class="collapse">
+                    <strong>Vendedor, Atención al cliente. | 2021-2022</strong>
+                    <ol>
+                        <li>Atención al cliente, ofreciendo un servicio eficiente.</li>
+                        <li>Control de caja, incluyendo cobros y cierre de operaciones.</li>
+                    </ol>
+            </li>
+            </div>
+        </ul>
+
+    </section>
+
+    <section class="container">
+        <h2 class="section-title">Redes</h2>
+        <p>Podés encontrarme en:</p>
+        <a href="https://www.linkedin.com/in/matias-castro-gv-74a395228" target="_blank" class="mr-3">
+            <i class="fab fa-linkedin fa-2x icon"></i>
+        </a>
+        <a href="https://github.com/mattzai" target="_blank" class="mr-3">
+            <i class="fab fa-github fa-2x icon"></i>
+        </a>
+    </section>
+
+
+</body>
+
+
+<footer class="bg-dark text-center text-light p-4">
+    <p class="mb-0">Matias Castro | Telefono: +569 26383815 | Email: matiascastrogv@gmail.com</p>
+</footer>
+
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
