Agregado el Portafolio como link

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Portafolio</a>
+                        <a class="nav-link" href="./portafolio.html" target="_blank">Portafolio</a>
                     </li>
                 </ul>
             </div>
@@ -72,6 +72,8 @@
             <li class="list-group-item"><i class="fab fa-bootstrap icon mr-2"></i>Bootstrap</li>
         </ul>
     </section>
+
+
 
     <section class="container">
         <h4 class="section-title">Experiencias en otros campos</h4>
