Agregada seccion de Educación

--- a/index.html
+++ b/index.html
@@ -73,7 +73,13 @@
         </ul>
     </section>
 
-
+    <section class="container">
+        <h2 class="section-title">Educación</h2>
+        <ul class="list-group">
+            <li class="list-group-item"><strong>Técnico de Produccion Digital</strong> | Universidad Nacional de Quilmes | 2018-2021</li>
+            <li class="list-group-item"><strong>Certificado en introducción a HTML, CSS, Python, JavaScript 1 y 2</strong> | Jovenes Programadores | 2022</li>
+        </ul>
+    </section>
 
     <section class="container">
         <h4 class="section-title">Experiencias en otros campos</h4>
@@ -94,7 +100,7 @@
                     </ol>
             </li>
             <li class="list-group-item"><button class="btn btn-primary mb-2" data-bs-toggle="collapse"
-                    data-bs-target="#trabajo2"><strong>Alfonso Bodegon</strong></button>
+                    data-bs-target="#trabajo2"><strong>Alfonso Bodegón</strong></button>
                 <div id="trabajo2" class="collapse">
                     <strong>Asistente de Cocina | 2022-2023</strong>
                     <ol>
