--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="container text-center">
             <div class="row justify-content-center">
                 <div class="col-12">
-                    <img src="./assets/img/ryu.jpeg" alt="Mi cara" height="200px" class="rounded-circle">
+                    <img src="./assets/img/perfil.png" alt="Mi cara" height="200px" class="rounded-circle">
                 </div>
                 <div class="col-md-8 col-12">
                     <p class="my-3">
