--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
     <header id="perfil">
         <div class="container text-center">
             <div class="row justify-content-center">
-                <div class="col-12">
+                <div class="col-12 my-2">
                     <img src="./assets/img/perfil.png" alt="Mi cara" height="200px" class="rounded-circle">
                 </div>
                 <div class="col-md-8 col-12">
-                    <p class="my-3">
+                    <p class="my-1">
                         Estudiante Desarrollador Frontend Jr.
                     </p>
                 </div>
