--- a/index.html
+++ b/index.html
@@ -21,15 +21,14 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">
-                <img src="assets/img/Nombre.png" class="img-fluid">
+                <img src="assets/img/Nombre.png" class="img-fluid" style="height: 30px;">
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav ms-auto mb-2 mb-lg-0 fs-5">
-                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./portafolio.html" target="_blank">Portafolio</a>
                     </li>
@@ -39,9 +38,9 @@
     </nav>
 
     <header id="perfil">
-        <div class="container text-center">
+        <div class="container text-center mt-4">
             <div class="row justify-content-center">
-                <div class="col-12 my-2">
+                <div class="col-12">
                     <img src="./assets/img/perfil.png" alt="Mi cara" height="200px" class="rounded-circle">
                 </div>
                 <div class="col-md-8 col-12">
