--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">
-                <img src="assets/img/Nombre.png" class="img-fluid" style="height: 30px;">
+            <a class="navbar-brand nombre-navbar" href="#">
+                <!--<img src="assets/img/Nombre.png" class="img-fluid" style="height: 30px;">-->
+                Matias Daniel Castro Gonzalez Videla
             </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -75,8 +77,10 @@
     <section class="container">
         <h2 class="section-title">Educación</h2>
         <ul class="list-group">
-            <li class="list-group-item"><strong>Técnico de Produccion Digital</strong> | Universidad Nacional de Quilmes | 2018-2021</li>
-            <li class="list-group-item"><strong>Certificado en introducción a HTML, CSS, Python, JavaScript 1 y 2</strong> | Jovenes Programadores | 2022</li>
+            <li class="list-group-item"><strong>Técnico de Produccion Digital</strong> | Universidad Nacional de Quilmes
+                | 2018-2021</li>
+            <li class="list-group-item"><strong>Certificado en introducción a HTML, CSS, Python, JavaScript 1 y
+                    2</strong> | Jovenes Programadores | 2022</li>
         </ul>
     </section>
 
