--- a/index.html
+++ b/index.html
@@ -20,8 +20,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand nombre-navbar" href="#">
-                <!--<img src="assets/img/Nombre.png" class="img-fluid" style="height: 30px;">-->
+            <a class="navbar-brand nombre-navbar" href="./portafolio.html" target="_blank">
                 Matias Daniel Castro Gonzalez Videla
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
