Algunos cambios de texto

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand nombre-navbar" href="./portafolio.html" target="_blank">
-                Matias Daniel Castro Gonzalez Videla
+                Matías Daniel Castro Gonzalez Videla
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
@@ -127,8 +127,8 @@
     </section>
 
     <section class="container">
-        <h2 class="section-title">Redes</h2>
-        <p>Podés encontrarme en:</p>
+        <h2 class="section-title">Contáctame</h2>
+        <p>Puedes encontrarme en:</p>
         <a href="https://www.linkedin.com/in/matias-castro-gv-74a395228" target="_blank" class="mr-3">
             <i class="fab fa-linkedin fa-2x icon"></i>
         </a>
@@ -142,7 +142,7 @@
 
 
 <footer class="bg-dark text-center text-light p-4">
-    <p class="mb-0">Matias Castro | Telefono: +569 26383815 | Email: matiascastrogv@gmail.com</p>
+    <p class="mb-0">Matías Castro | Telefono: +569 26383815 | Email: matiascastrogv@gmail.com</p>
 </footer>
 
 
