--- a/portafolio.html
+++ b/portafolio.html
@@ -1,83 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>Matias Castro | Portafolio</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
-        integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <title>Matias Castro | Portafolio</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
+    integrity="sha512-q3eWabyZPc1XTCmF+8/LuE1ozpg5xxn7iO89yfSOd5/oKvyqLngoNGsx8jq92Y8eXJ/IRxQbEC+FGSYxtk2oiw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
+
 <body>
-<section id="portfolio" class="container my-5">
-  <h2 class="text-center mb-4">Mi Portafolio</h2>
+  <section id="portfolio" class="container">
+    <h2 class="text-center pb-3 pt-3 mb-4 miportafolio">Mi Portafolio</h2>
 
-  <div class="row">
 
-    <div class="col-md-4 col-sm-6 mb-4">
-      <div class="card h-100 shadow-sm">
-        <img src="./assets/img/desafio 1.png" class="card-img-top" alt="Desafio 1">
-        <div class="card-body">
-          <h5 class="card-title">Introduccion a HTML</h5>
-          <p class="card-text">Proyecto base para iniciar con HTML.</p>
-          <a href="./assets/img/desafio 1.png" target="_blank" class="btn btn-primary btn-sm">Ver imagen completa</a>
+    <div>
+      <div id="carouselExample" class="carousel slide w-80 ">
+        <div class="carousel-inner ">
+          <div class="carousel-item active">
+            <img src="./assets/img/desafio 1.png" class="d-block w-100" alt="Desafio CV">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/desafio 2.png" class="d-block w-100" alt="Desafío Card">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/desafio 3.png" class="d-block w-100" alt="Desafío Iguana">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/desafio 4.png" class="d-block w-100" alt="Desafío Cuppon">
+          </div>
+          <div class="carousel-item">
+            <img src="./assets/img/desafio 5.png" class="d-block w-100" alt="Proyecto Final">
+          </div>
         </div>
-      </div>
-    </div>
-
-    <div class="col-md-4 col-sm-6 mb-4">
-      <div class="card h-100 shadow-sm">
-        <img src="./assets/img/desafio 2.png" class="card-img-top" alt="Desafio 2">
-        <div class="card-body">
-          <h5 class="card-title">Introducción a CSS</h5>
-          <p class="card-text">Proyecto introductorio a CSS.</p>
-          <a href="./assets/img/desafio 2.png" target="_blank" class="btn btn-primary btn-sm">Ver imagen completa</a>
-        </div>
-      </div>
-    </div>
-
-        <div class="col-md-4 col-sm-6 mb-4">
-      <div class="card h-100 shadow-sm">
-        <img src="./assets/img/desafio 3.png" class="card-img-top" alt="Desafio 3">
-        <div class="card-body">
-          <h5 class="card-title">Alineando contenido con Flex</h5>
-          <p class="card-text">Proyecto donde aprendi a ajustar contenido con Flex.</p>
-          <a href="./assets/img/desafio 3.png" target="_blank" class="btn btn-primary btn-sm">Ver imagen completa</a>
-        </div>
-      </div>
-    </div>
-
-        <div class="col-md-4 col-sm-6 mb-4">
-      <div class="card h-100 shadow-sm">
-        <img src="./assets/img/desafio 4.png" class="card-img-top" alt="Desafio 4">
-        <div class="card-body">
-          <h5 class="card-title">Bootstrap</h5>
-          <p class="card-text">Introduccion a bootstrap.</p>
-          <a href="./assets/img/desafio 4.png" target="_blank" class="btn btn-primary btn-sm">Ver imagen completa</a>
-        </div>
-      </div>
-    </div>
-
-        <div class="col-md-4 col-sm-6 mb-4">
-      <div class="card h-100 shadow-sm">
-        <img src="./assets/img/desafio 5.png" class="card-img-top" alt="Desafio 5">
-        <div class="card-body">
-          <h5 class="card-title">Terminal, Git y Github</h5>
-          <p class="card-text">Proyecto donde aprendi a hacer Forks, clonar a mi pc y hacer commits con Github.</p>
-          <a href="./assets/img/desafio 5.png" target="_blank" class="btn btn-primary btn-sm">Ver imagen completa</a>
-        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
       </div>
     </div>
 
 
-  </div>
-</section>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q"
+      crossorigin="anonymous"></script>
 </body>
+
 </html>
