--- a/portafolio.html
+++ b/portafolio.html
@@ -21,35 +21,34 @@
   <section id="portfolio" class="container">
     <h2 class="text-center pb-3 pt-3 mb-4 miportafolio">Mi Portafolio</h2>
 
-
-    <div>
-      <div id="carouselExample" class="carousel slide w-80 ">
-        <div class="carousel-inner ">
-          <div class="carousel-item active">
-            <img src="./assets/img/desafio 1.png" class="d-block w-100" alt="Desafio CV">
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/desafio 2.png" class="d-block w-100" alt="Desafío Card">
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/desafio 3.png" class="d-block w-100" alt="Desafío Iguana">
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/desafio 4.png" class="d-block w-100" alt="Desafío Cuppon">
-          </div>
-          <div class="carousel-item">
-            <img src="./assets/img/desafio 5.png" class="d-block w-100" alt="Proyecto Final">
-          </div>
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="5000">
+          <img src="./assets/img/desafio 1.png" class="d-block w-100" alt="Desafio CV">
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Previous</span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="visually-hidden">Next</span>
-        </button>
+        <div class="carousel-item active" data-bs-interval="5000">
+          <img src="./assets/img/desafio 2.png" class="d-block w-100" alt="Desafío Card">
+        </div>
+        <div class="carousel-item active" data-bs-interval="5000">
+          <img src="./assets/img/desafio 3.png" class="d-block w-100" alt="Desafío Iguana">
+        </div>
+        <div class="carousel-item active" data-bs-interval="5000">
+          <img src="./assets/img/desafio 4.png" class="d-block w-100" alt="Desafío Cuppon">
+        </div>
+        <div class="carousel-item active" data-bs-interval="5000">
+          <img src="./assets/img/desafio 5.png" class="d-block w-100" alt="Proyecto Final">
+        </div>
       </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval"
+        data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
 
 
